# rocm-jax

./: .bazelrc  .clangd  .gitignore  .pylintrc  BUILDING.md  DEVSETUP.md  README.md  WORKSPACE  build.sh  build_new.sh  ci.yml  runfiles-wheel-build-fix.patch  stack.py
.devcontainer/: devcontainer.json
.github/workflows/: build-base-docker.yml  build-docker.yml  build-wheels.yml  ci-ut.yml  ci.yml  lint.yml  llama-perf.yml  nightly-rbe.yml  nightly.yml  pytest-results-to-db.yml  rocm-perf.yml  test-and-upload.yml
_my/: gdb-sym.py  gdb-sym2.py  gen-bt.py  kernels.bt  layernorm_fp8_mlp.py  mylog  rccl.bt  rccl2.0.bt  rccl2.1.bt  rccl2.2.bt  stream.bt  unique_probes.py
_my/old2/: rccl2.bt
_my_Pallas/: floats.py  mosaic00.py
ci/: Dockerfile.maxtext  ingest_jax_ci_logs.sh  pytest_drop_test_list.ini  pytest_skips.ini  upload_pytest_to_db.py  upload_test_to_db.py  upload_to_llama_db.py
ci/jax_rbe/: pr_setup.sh  pr_test.sh
ci/patches/: 0001-Enable-testing-with-ROCm-plugin-wheels.patch
ci/patches/jax/: 0001-Enable-testing-with-ROCm-plugin-wheels.patch  0002-drop-redundant-xla-cublaslt-algorithm3-patch.patch  0003-drop-redundant-xla-nccl-and-cublaslt-default-patches.patch
doc/design/: simplify_jax_build.md
docker/: Dockerfile.base-therock-ubu24  Dockerfile.base-ubu22  Dockerfile.base-ubu24  Dockerfile.core-ubu24  Dockerfile.jax-ubu22  Dockerfile.jax-ubu24  Makefile
docker/devsetup/: Dockerfile.jax-dev-ubuntu24-rocm7.2.0  Makefile
docker/manylinux/: Dockerfile.jax-manylinux2014-rocm  Dockerfile.jax-manylinux_2_28-rocm  Dockerfile.jax-manylinux_2_28-rocm7.2.0  Dockerfile.jax-manylinux_2_28-therock  Dockerfile.manylinux_2_28_x86_64.therock
docker/patches/: rocr-intercept-queue-fix.patch
docs/design/: nightly-pipeline-design.md
jax/_src/export/: _export.py
jax_nightly_triage/: .env.example  README.md  analyze_job.py  github_client.py  regression.py  report.py  requirements.txt  run.ps1  run.sh  triage.py
jax_nightly_triage/tests/: test_github_client.py  test_regression_classify.py  test_smoke.py
jax_rocm_plugin/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  build_bzl.sh  rbe.bazelrc  rbe.sh
jax_rocm_plugin/jax_plugins/: BUILD.bazel
jax_rocm_plugin/jax_plugins/cuda/: BUILD.bazel
jax_rocm_plugin/jax_plugins/rocm/: BUILD.bazel  plugin_setup.py
jax_rocm_plugin/jaxlib_ext/: BUILD  BUILD.bazel
jax_rocm_plugin/jaxlib_ext/rocm/: BUILD
jax_rocm_plugin/jaxlib_ext/tools/: BUILD.bazel  build_gpu_kernels_wheel.py  build_utils.py
jax_rocm_plugin/pjrt/: BUILD
jax_rocm_plugin/pjrt/python/: __init__.py  setup.py  version.py
jax_rocm_plugin/pjrt/tools/: BUILD.bazel  build_gpu_plugin_wheel.py  build_utils.py
jax_rocm_plugin/platform/linux/: BUILD
jax_rocm_plugin/platform/linux_x64/: BUILD  cc_toolchain_config.bzl  module.modulemap
logs/: absl_cpp_logging_test_log.html  absl_cpp_logging_test_log.json  api_util_test_log.html  api_util_test_log.json  array_api_test_log.html  array_api_test_log.json  array_extensibility_test_log.html  array_extensibility_test_log.json  array_interoperability_test_log.html  array_interoperability_test_log.json  blocked_sampler_test_log.html  blocked_sampler_test_log.json  buffer_callback_test_log.html  buffer_callback_test_log.json  cache_key_test_log.html  cache_key_test_log.json  cholesky_update_test_log.html  cholesky_update_test_log.json  clear_backends_test_log.html  clear_backends_test_log.json  config_test_log.html  config_test_log.json  core_test_log.html  core_test_log.json  custom_api_test_log.html  custom_api_test_log.json  custom_linear_solve_test_log.html  custom_linear_solve_test_log.json  custom_partitioning_sharding_rule_test_log.html  custom_partitioning_sharding_rule_test_log.json  custom_partitioning_test_log.html  custom_partitioning_test_log.json  custom_root_test_log.html  custom_root_test_log.json  deprecation_test_log.html  deprecation_test_log.json  device_test_log.html  device_test_log.json  distributed_initialize_test_log.html  distributed_initialize_test_log.json  (+373 more)
logs-12132025/: absl_cpp_logging_test_log.html  absl_cpp_logging_test_log.json  api_util_test_log.html  api_util_test_log.json  array_api_test_log.html  array_api_test_log.json  array_extensibility_test_log.html  array_extensibility_test_log.json  array_interoperability_test_log.html  array_interoperability_test_log.json  blocked_sampler_test_log.html  blocked_sampler_test_log.json  buffer_callback_test_log.html  buffer_callback_test_log.json  cache_key_test_log.html  cache_key_test_log.json  cholesky_update_test_log.html  cholesky_update_test_log.json  clear_backends_test_log.html  clear_backends_test_log.json  config_test_log.html  config_test_log.json  core_test_log.html  core_test_log.json  custom_api_test_log.html  custom_api_test_log.json  custom_linear_solve_test_log.html  custom_linear_solve_test_log.json  custom_partitioning_sharding_rule_test_log.html  custom_partitioning_sharding_rule_test_log.json  custom_partitioning_test_log.html  custom_partitioning_test_log.json  custom_root_test_log.html  custom_root_test_log.json  deprecation_test_log.html  deprecation_test_log.json  device_test_log.html  device_test_log.json  distributed_initialize_test_log.html  distributed_initialize_test_log.json  (+292 more)
testing/: BUILD  rocm_jax_env.sh
tests/: jax_bazel_rbe.sh
tools/: docker_dev_setup.sh  get_rocm.py
