# Copyright 2025 Advanced Micro Devices Corp.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@jax//jaxlib:jax.bzl", "jax_wheel", "wheel_sources")
load(
    "@xla//third_party/py:py_import.bzl",
    "py_import",
)

package(default_visibility = ["//visibility:public"])

# ============================================================================
# ROCm Plugin Wheel (jax_rocm7_plugin) - contains GPU kernels
# ============================================================================

wheel_sources(
    name = "rocm_plugin_sources",
    static_srcs = [
        "//jaxlib_ext/tools:LICENSE.txt",
        "//pjrt/python:version.py",
        "//jax_plugins/rocm:plugin_pyproject.toml",
        "//jax_plugins/rocm:plugin_setup.py",
        "@jax//jaxlib:version",
        "@jax//jaxlib/rocm:rocm_plugin_extension",
        "@jax//jaxlib/rocm:rocm_gpu_support",
    ],
)

jax_wheel(
    name = "jax_rocm7_plugin_wheel",
    enable_rocm = True,
    platform_version = "7",
    source_files = [":rocm_plugin_sources"],
    wheel_binary = "//jaxlib_ext/tools:build_gpu_kernels_wheel",
    wheel_name = "jax_rocm7_plugin",
)

# ============================================================================
# ROCm PJRT Wheel (jax_rocm7_pjrt) - contains PJRT plugin
# ============================================================================

wheel_sources(
    name = "rocm_pjrt_sources",
    static_srcs = [
        "//pjrt/tools:LICENSE.txt",
        "//pjrt:pjrt_c_api_gpu_plugin.so",
        "//pjrt/python:version.py",
        "//pjrt/python:pyproject.toml",
        "//pjrt/python:setup.py",
        "//pjrt/python:__init__.py",
    ],
)

jax_wheel(
    name = "jax_rocm7_pjrt_wheel",
    enable_rocm = True,
    no_abi = True,
    platform_version = "7",
    source_files = [":rocm_pjrt_sources"],
    wheel_binary = "//pjrt/tools:build_gpu_plugin_wheel",
    wheel_name = "jax_rocm7_pjrt",
)

# py_import wrappers to provide PyInfo for test dependencies
py_import(
    name = "pjrt.whl",
    wheel = ":jax_rocm7_pjrt_wheel",
)

py_import(
    name = "plugin.whl",
    wheel = ":jax_rocm7_plugin_wheel",
)
