# Copyright 2025 Advanced Micro Devices Corp.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "@xla//third_party/py:py_import.bzl",
    "py_import",
)

package(default_visibility = ["//visibility:public"])

py_import(
    name = "pjrt.whl",
    wheel = "//pjrt/tools:jax_rocm7_pjrt_wheel",
)

py_import(
    name = "plugin.whl",
    wheel = "//jaxlib_ext/tools:jax_rocm7_plugin_wheel",
)

py_import(
    name = "jaxlib.whl",
    wheel = "@jax//jaxlib/tools:jaxlib_wheel",
)

# Usage: bazel run //:build_jaxlib_wheel -- /path/to/output/dir
genrule(
    name = "build_jaxlib_wheel",
    srcs = ["@jax//jaxlib/tools:jaxlib_wheel"],
    outs = ["build_jaxlib_wheel.sh"],
    cmd = "echo '#!/bin/bash\ncp $(location @jax//jaxlib/tools:jaxlib_wheel) $$1' > $@",
    executable = True,
    tags = ["local"],
)
