# Copyright 2025 Advanced Micro Devices, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""BUILD file for jaxlib_ext - ROCm kernel extensions.

This provides the ROCm kernel extensions equivalent to the jax-rocm7-plugin wheel.
The extensions are built from @jax//jaxlib/rocm and exposed here for use in
the built_in_wheels mode.

These are the same targets referenced by the wheel builder in
jaxlib_ext/tools/BUILD.bazel.
"""

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

# ROCm GPU support - bundles all kernel extensions:
# _hybrid, _linalg, _prng, _rnn, _solver, _sparse, _triton
alias(
    name = "rocm_gpu_support",
    actual = "@jax//jaxlib/rocm:rocm_gpu_support",
)

# ROCm plugin extension - main plugin entry point
alias(
    name = "rocm_plugin_extension",
    actual = "@jax//jaxlib/rocm:rocm_plugin_extension",
)

# Version info from jaxlib (as py_library)
alias(
    name = "version",
    actual = "@jax//jaxlib/tools:version",
)
