# Copyright 2024 The JAX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])

load(
    "@jax//jaxlib:jax.bzl",
    "py_library_providing_imports_info",
    "pytype_library",
)

package(
    default_applicable_licenses = [],
    default_visibility = ["//visibility:public"],
)

exports_files([
    "plugin_pyproject.toml",
    "plugin_setup.py",
])

py_library_providing_imports_info(
    name = "rocm_plugin",
    srcs = [
        "//pjrt/python:__init__.py",
        "//pjrt/python:version.py",
    ],
    data = [
        "//pjrt:pjrt_c_api_gpu_plugin.so",
    ],
    lib_rule = pytype_library,
)
