# Copyright 2018 The JAX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


licenses(["notice"])  # Apache 2

package(default_visibility = ["//visibility:public"])

load("//third_party/xla:workspace.bzl", xla_commit = "XLA_COMMIT")
load("//third_party/jax:workspace.bzl", jax_commit = "COMMIT")

py_binary(
    name = "build_gpu_kernels_wheel",
    srcs = ["build_gpu_kernels_wheel.py"],
    args = ["--xla-commit", xla_commit , 
            "--jax-commit", jax_commit ],
    data = [
        "LICENSE.txt",
        "@jax//jaxlib:version",
        "//pjrt/python:version.py",
        "//jaxlib_ext:rocm_plugin_extension.so",
        "//jaxlib_ext:_linalg.so",
        "//jaxlib_ext:_prng.so",
        "//jaxlib_ext:_solver.so",
        "//jaxlib_ext:_sparse.so",
        "//jaxlib_ext:_hybrid.so",
        "//jaxlib_ext:_rnn.so",
        "//jaxlib_ext:_triton.so",
        "//jax_plugins/rocm:plugin_pyproject.toml",
        "//jax_plugins/rocm:plugin_setup.py",
    ],
    deps = [
        "build_utils",
        "@bazel_tools//tools/python/runfiles",
        "@pypi_build//:pkg",
        "@pypi_setuptools//:pkg",
        "@pypi_wheel//:pkg",
    ],
)

py_library(
    name = "build_utils",
    srcs = ["build_utils.py"],
)
