# Copyright 2018 The JAX Authors.
# Copyright 2025 Advanced Micro Devices Corp.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@jax//jaxlib:jax.bzl", "jax_wheel", "wheel_sources")
load("//third_party/jax:workspace.bzl", jax_commit = "JAX_COMMIT")
load("//third_party/xla:workspace.bzl", xla_commit = "XLA_COMMIT")

licenses(["notice"])  # Apache 2

package(default_visibility = ["//visibility:public"])

# Source files for the ROCm PJRT wheel - used by both the tool and jax_wheel
ROCM_PJRT_SOURCES = [
    "LICENSE.txt",
    "//pjrt:pjrt_c_api_gpu_plugin.so",
    "//pjrt/python:__init__.py",
    "//pjrt/python:pyproject.toml",
    "//pjrt/python:setup.py",
    "//pjrt/python:version.py",
]

py_binary(
    name = "build_gpu_plugin_wheel",
    srcs = ["build_gpu_plugin_wheel.py"],
    args = [
        "--xla-commit",
        xla_commit,
        "--jax-commit",
        jax_commit,
    ],
    data = ROCM_PJRT_SOURCES,
    deps = [
        "build_utils",
        "@bazel_tools//tools/python/runfiles",
        "@pypi_build//:pkg",
        "@pypi_setuptools//:pkg",
        "@pypi_wheel//:pkg",
    ],
)

py_library(
    name = "build_utils",
    srcs = ["build_utils.py"],
)

# Wheel sources using the same list
wheel_sources(
    name = "rocm_pjrt_sources",
    static_srcs = ROCM_PJRT_SOURCES,
)

# ROCm PJRT Wheel (jax_rocm7_pjrt) - contains PJRT plugin
jax_wheel(
    name = "jax_rocm7_pjrt_wheel",
    enable_rocm = True,
    no_abi = True,
    platform_version = "7",
    source_files = [":rocm_pjrt_sources"],
    wheel_binary = ":build_gpu_plugin_wheel",
    wheel_name = "jax_rocm7_pjrt",
)
